--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,5 +5,13 @@ description = "WasFeines API"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "boto3>=1.37.9",
     "fastapi[standard]>=0.115.11",
+    "pydantic-settings>=2.8.1",
+]
+
+[dependency-groups]
+dev = [
+    "boto3-stubs[essential]>=1.37.9",
+    "ipykernel>=6.29.5",
 ]
