--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -14,4 +14,10 @@ dependencies = [
 dev = [
     "boto3-stubs[essential]>=1.37.9",
     "ipykernel>=6.29.5",
+    "pytest>=8.3.5",
+]
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "src"
 ]
