--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,8 +5,10 @@ description = "WasFeines API"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "authlib>=1.5.1",
     "boto3>=1.37.9",
     "fastapi[standard]>=0.115.11",
+    "itsdangerous>=2.2.0",
     "pydantic-settings>=2.8.1",
 ]
 
@@ -15,6 +17,7 @@ dev = [
     "boto3-stubs[essential]>=1.37.9",
     "ipykernel>=6.29.5",
     "pytest>=8.3.5",
+    "types-oauthlib>=3.2.0.20240806",
 ]
 
 [tool.pytest.ini_options]
