--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "boto3-stubs[essential]>=1.37.9",
+    "ipdb>=0.13.13",
     "ipykernel>=6.29.5",
     "pytest>=8.3.5",
     "types-oauthlib>=3.2.0.20240806",
