--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@tanstack/react-query": "^5.74.0",
     "openapi-fetch": "^0.13.5",
     "openapi-react-query": "^0.3.1",
     "react": "^19.0.0",
