--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@tanstack/react-query": "^5.74.0",
+    "lodash.debounce": "^4.0.8",
     "openapi-fetch": "^0.13.5",
     "openapi-react-query": "^0.3.1",
     "react": "^19.0.0",
