--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -5,10 +5,12 @@ description = "WasFeines API"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "anthropic>=0.50.0",
     "authlib>=1.5.1",
     "boto3==1.35.99",
     "fastapi[standard]>=0.115.11",
     "itsdangerous>=2.2.0",
+    "lxml>=5.4.0",
     "pydantic-settings>=2.8.1",
 ]
 
@@ -18,6 +20,7 @@ dev = [
     "ipdb>=0.13.13",
     "ipykernel>=6.29.5",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "types-oauthlib>=3.2.0.20240806",
 ]
 
